# uml-search-mcp

./: Dockerfile  README.md  build_and_run.sh  docker-compose.yaml  prometheus.yaml  pyproject.toml  server.py
.github/workflows/: build_and_push_image.yaml
docs/web_docs/: __category__.json  intro.md
k8s/: k8s_prod.yaml  metrics.yaml
umlsearch/: __init__.py  news.py  people.py  places.py  utils.py  website.py
