[project]
name = "uml-search-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anytree>=2.13.0",
    "beautifulsoup4>=4.15.0",
    "bs4>=0.0.2",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "playwright>=1.60.0",
    "prometheus-client>=0.25.0",
]
